test_suite/tests/ui/static_text/missing_text.stderr
error: missing text for `static_text`: try `#[static_text("...")]`
 --> tests/ui/static_text/missing_text.rs:7:5
  |
7 |     #[static_text]
  |     ^^^^^^^^^^^^^^
